// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Processdetails jobs pannel component tests Jobs empty response 1`] = `<div />`;

exports[`Processdetails jobs pannel component tests Snapshot testing 1`] = `
<div>
  <article
    class="pf-c-card"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__header"
    >
      <h3
        class="pf-c-title pf-m-xl"
        data-ouia-component-id="OUIA-Generated-Title-1"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Jobs
      </h3>
    </div>
    <div
      class="pf-c-card__body"
    >
      <table
        aria-label="Process details jobs panel"
        aria-labelledby="Process details jobs panel"
        class="pf-c-table pf-m-grid-md pf-m-compact"
        data-ouia-component-id="OUIA-Generated-Table-2"
        data-ouia-component-type="PF4/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class=""
        >
          <tr
            class=""
            data-ouia-component-id="OUIA-Generated-TableRow-1"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <th
              class=""
              data-key="0"
              data-label="Job id"
              scope="col"
            >
              Job id
            </th>
            <th
              class=""
              data-key="1"
              data-label="Status"
              scope="col"
            >
              Status
            </th>
            <th
              class=""
              data-key="2"
              data-label="Expiration time"
              scope="col"
            >
              Expiration time
            </th>
            <th
              class=""
              data-key="3"
              data-label="Actions"
              scope="col"
            >
              Actions
            </th>
          </tr>
        </thead>
        <tbody
          class=""
          role="rowgroup"
        >
          <tr
            class=""
            data-ouia-component-id="OUIA-Generated-TableRow-2"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <td
              class=""
              data-key="0"
              data-label="Job id"
            >
              <span>
                6e74a57
              </span>
            </td>
            <td
              class=""
              data-key="1"
              data-label="Status"
            >
              Executed
            </td>
            <td
              class=""
              data-key="2"
              data-label="Expiration time"
            >
              N/A
            </td>
            <td
              class=""
              data-key="3"
              data-label="Actions"
            >
              <div
                aria-label="Job actions dropdown"
                aria-labelledby="Job actions dropdown"
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-1"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="kebab-toggle"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </article>
</div>
`;

exports[`Processdetails jobs pannel component tests test expiration time 1`] = `
<div>
  <article
    class="pf-c-card"
    data-ouia-component-id="OUIA-Generated-Card-2"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__header"
    >
      <h3
        class="pf-c-title pf-m-xl"
        data-ouia-component-id="OUIA-Generated-Title-2"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Jobs
      </h3>
    </div>
    <div
      class="pf-c-card__body"
    >
      <table
        aria-label="Process details jobs panel"
        aria-labelledby="Process details jobs panel"
        class="pf-c-table pf-m-grid-md pf-m-compact"
        data-ouia-component-id="OUIA-Generated-Table-4"
        data-ouia-component-type="PF4/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class=""
        >
          <tr
            class=""
            data-ouia-component-id="OUIA-Generated-TableRow-3"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <th
              class=""
              data-key="0"
              data-label="Job id"
              scope="col"
            >
              Job id
            </th>
            <th
              class=""
              data-key="1"
              data-label="Status"
              scope="col"
            >
              Status
            </th>
            <th
              class=""
              data-key="2"
              data-label="Expiration time"
              scope="col"
            >
              Expiration time
            </th>
            <th
              class=""
              data-key="3"
              data-label="Actions"
              scope="col"
            >
              Actions
            </th>
          </tr>
        </thead>
        <tbody
          class=""
          role="rowgroup"
        >
          <tr
            class=""
            data-ouia-component-id="OUIA-Generated-TableRow-4"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <td
              class=""
              data-key="0"
              data-label="Job id"
            >
              <span>
                6e74a57
              </span>
            </td>
            <td
              class=""
              data-key="1"
              data-label="Status"
            >
              Executed
            </td>
            <td
              class=""
              data-key="2"
              data-label="Expiration time"
            >
               
              expires in
               
              <time
                datetime="1598672150147"
              >
                3 months
              </time>
            </td>
            <td
              class=""
              data-key="3"
              data-label="Actions"
            >
              <div
                aria-label="Job actions dropdown"
                aria-labelledby="Job actions dropdown"
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-2"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="kebab-toggle"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </article>
</div>
`;
